@@ -23,7 +23,7 @@ directory=examples
 
 [Prereqs]
 Moose = 2.2006
-MooseX::Getopt = 0.68
+MooX::Options = 4.103
 MooseX::Traits::Pluggable = 0.12
 Type::Tiny = 1.004004
 DBIx::Class::DeploymentHandler = 0.002223
